# rust-plugin-example

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yaml  ci.yaml  release.yml
example/: farm.config.ts  package.json  pnpm-lock.yaml
playground/: farm.config.ts  package.json
src/: lib.rs
