[package]
edition = "2021"
name = "farm_plugin_example"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "0.6.2" }
farmfe_toolkit_plugin_types = { version = "0.0.18" }
farmfe_macro_plugin = { version = "0.0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
